Remove logo wrapping link. Really fixes #5

--- a/source/css/scss/components/_Logo.scss
+++ b/source/css/scss/components/_Logo.scss
@@ -7,14 +7,6 @@
 	display: block;
 }
 
-	.Logo_svg {
-		width: 100%;
-		height: 100%;
-		display: block;
-	}
-	
-	
-
 	.Logo_fill{
 		fill: $pwccCol_useLogo;
 	}
