--- a/source/css/style.css
+++ b/source/css/style.css
@@ -669,11 +669,6 @@ blockquote cite {
   background-color: white;
   display: block; }
 
-.Logo_svg {
-  width: 100%;
-  height: 100%;
-  display: block; }
-
 .Logo_fill {
   fill: #006ef6; }
 
